[gd_scene load_steps=13 format=3 uid="uid://dh70fngr5ys2g"]

[ext_resource type="Script" path="res://Cube.gd" id="1_wvnsr"]
[ext_resource type="Script" path="res://AIController3D.gd" id="2_ydfoc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1xnfq"]
emission_enabled = true
emission = Color(1, 0.643137, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_3i10h"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ieuvs"]

[sub_resource type="BoxMesh" id="BoxMesh_5r8n0"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_w61ht"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_pjbua"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_val0g"]
emission_enabled = true
emission = Color(0, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_f33uy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wrpog"]

[sub_resource type="BoxShape3D" id="BoxShape3D_03n76"]

[node name="Main" type="Node3D"]

[node name="Cube" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.65156, 0.626266, 0)
script = ExtResource("1_wvnsr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cube"]
material_override = SubResource("StandardMaterial3D_1xnfq")
mesh = SubResource("BoxMesh_3i10h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube"]
shape = SubResource("BoxShape3D_ieuvs")

[node name="AIController3D" type="Node3D" parent="Cube"]
script = ExtResource("2_ydfoc")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 0.1, 0, 0, 0, 10, 0, 0, 0)
mesh = SubResource("BoxMesh_5r8n0")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_w61ht")

[node name="Target" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2512, -0.297976, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Target"]
shape = SubResource("BoxShape3D_pjbua")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Target"]
material_override = SubResource("StandardMaterial3D_val0g")
mesh = SubResource("BoxMesh_f33uy")

[node name="Wall" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 10, -5.49846, 0, 0)
shape = SubResource("BoxShape3D_wrpog")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Wall"]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.51802)
shape = SubResource("BoxShape3D_03n76")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 10, 5.49845, 0, 0)
shape = SubResource("BoxShape3D_wrpog")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Wall"]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.51802)
shape = SubResource("BoxShape3D_03n76")

[connection signal="body_entered" from="Target" to="Cube" method="_on_target_body_entered"]
[connection signal="body_entered" from="Wall" to="Cube" method="_on_wall_body_entered"]
